--- a/protocolo/capitulos/actividades.tex
+++ b/protocolo/capitulos/actividades.tex
@@ -48,7 +48,7 @@ Las actividades, con sus tiempos respectivos, para llevar a cabo este proyecto s
 	\hline 
 	Implementación del API REST del servidor en la nube&  &  &  &  & \checkmark &  &  &  &  &  \\ 
 	\hline 
-	Investigación y aprendizaje sobre Lógica difusa&  &  &\checkmark  &\checkmark  &\checkmark  &\checkmark  &  &  &  & \\ 
+	Investigación y aprendizaje sobre Lógica difusa&  &  &  & \checkmark &\checkmark  &\checkmark  &  &  &  & \\ 
 	\hline 
 	Formulación de semántica para razonamiento difuso&  &  &  &  &  &\checkmark  &  &  &  &  \\ 
 	\hline 
