--- a/protocolo/capitulos/marco_teorico.tex
+++ b/protocolo/capitulos/marco_teorico.tex
@@ -1,4 +1,4 @@
-% \section{Marco teórico}
+\section{Marco referencial}
 %\caption[Texto en lista de figuras sin cita]{Texto en título de imagen con cita.}
 
 % Presentar los conceptos necesarios para entender la investigacion
@@ -18,6 +18,24 @@
 
 % dejar las referencias para el final. En los antecedentes es importante el trabajo, por lo que se mencionan al principio.
 % aqui lo que importa es la informacion, por lo que s eponen al final.
+
+
+
+
+\subsection{Marco teórico}
+
+
+\subsection{Marco tecnológico}
+
+
+% sensores
+\subsubsection{}
+
+% microcontroladores
+
+% ssh
+
+
 
 % TODO: El marco teorico es mas para 
 
