--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -30,16 +30,17 @@
 % \clearpage
 
 % \include{capitulos/resumen}
-\include{capitulos/intro}
-\include{capitulos/planteamiento}
-\include{capitulos/objetivos}
+\input{capitulos/intro}
+\input{capitulos/planteamiento}
+\input{capitulos/objetivos}
 \input{capitulos/justificacion}
 \input{capitulos/propuesta_solucion}
-\include{capitulos/marco_teorico}
-\include{capitulos/alcance}
-\include{capitulos/metodologia}
+\input{capitulos/marco_teorico}
+\input{capitulos/alcance}
+\input{capitulos/metodologia}
 \include{capitulos/actividades}
 
+\newpage
 \bibliography{referencias}
 \bibliographystyle{ieeetr}
 
