--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -6,6 +6,30 @@ note = {Online; accessed April 10, 2021},
 year = {2021}
 }
 
+@misc{nodemcu_mesh,
+author = "{IoT Design Pro}",
+title = {{Creating NodeMCU Mesh Network using ESP12 and Arduino IDE}},
+howpublished = {\url{https://www.iotdesignpro.com/projects/creating-nodemcu-mesh-networking-using-esp12-and-arduino-ide}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+@misc{nodemcu_deep_sleep,
+author = "{NodeMCU}",
+title = {{NodeMCU Firmware Documentation}},
+howpublished = {\url{https://nodemcu.readthedocs.io/en/release/modules/node/#nodedsleep}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+@manual{nodemcu_datasheet,
+    organization  = "Espressif Systems IOT Team",
+    title         = "ESP8266EX Datasheet",
+    year          =  2015,
+    month         =  6,
+    note          = "Version 4.3"
+}
+
 @misc{intelliclimate_kit_2021,
 author = "{Autogrow}",
 title = {{Intelliclimate Kit}},
