--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -22,6 +22,29 @@ note = {Online; accessed April 18, 2021},
 year = {2021}
 }
 
+@misc{capacitive_soil_sensor_specs,
+author = "{DF Robot}",
+title = {{Capacitive Soil Moisture Sensro}},
+howpublished = {\url{https://media.digikey.com/pdf/Data%20Sheets/DFRobot%20PDFs/SEN0193_Web.pdf}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+@misc{dht22_product_page,
+  author = "{Adafruit}",
+  title = {{DHT22 temperature-humidity sensor}},
+  howpublished = {\url{https://www.adafruit.com/product/385}},
+  note = {Online; accessed April 18, 2021},
+  year = {2021}
+}
+@misc{veml_product_page,
+  author = "{Adafruit}",
+  title = {{Adafruit VEML7700 Lux Sensor}},
+  howpublished = {\url{adafruit.com/product/4162}},
+  note = {Online; accessed April 18, 2021},
+  year = {2021}
+}
+
 @manual{nodemcu_datasheet,
     organization  = "Espressif Systems IOT Team",
     title         = "ESP8266EX Datasheet",
