--- a/protocolo/capitulos/propuesta_solucion.tex
+++ b/protocolo/capitulos/propuesta_solucion.tex
@@ -6,6 +6,6 @@ El monitoreo se basará en una red inalámbrica de sensores. Esta red estará co
 
 Esta será un \textit{raspberry pi} 4, estará encargada de recibir los datos, procesarlos, filtrarlos y enviarlos a un servidor en la nube. En esta computadora también se realizará el control difuso del riego y del clima, tomando decisiones a partir de las lecturas de sensores y las reglas heurísticas previamente definidas. Este control podrá ser sobre escrito a través de la interfaz de usuario, conservando así total control sobre el sistema.
 
-Existirán 2 variantes de nodos. Ambas variantes contarán con un microcontrolador Node MCU-ESP8266, el cual estará encargado de sensar un sensor de temperatura y humedad (DHT11), un sensor de intensidad de luz (Adafruit 4162 VEML7700) y, dependiendo de la variante, un sensor capacitivo de humedad del suelo. Los nodos estarán dispersos uniformemente dentro del invernadero, los que cuenten con sensor de humedad del suelo estarán a nivel del suelo y los que no, estarán a una altura en la que el cultivo no cubra el sensor de iluminancia.
+Existirán 2 variantes de nodos. Ambas variantes contarán con un microcontrolador Node MCU-ESP8266, el cual estará encargado de sensar un sensor de temperatura y humedad (DHT22), un sensor de iluminancia (Adafruit 4162 VEML7700) y, dependiendo de la variante, un sensor capacitivo de humedad del suelo. Los nodos estarán dispersos uniformemente dentro del invernadero, los que cuenten con sensor de humedad del suelo estarán a nivel del suelo y los que no, estarán a una altura en la que el cultivo no cubra el sensor de iluminancia.
 
 En el servidor alojado en la nube se encontrará una interfaz para programas de aplicación (API por sus siglas en inglés) REST codificada en NodeJS. Esta se encargará de recibir los datos enviados por la computadora central del invernadero y guardarlos en una instancia de MongoDB. Estos datos serán los que el usuario podrá monitorear en la interfaz, así como realizar el control remoto a través de un túnel inverso SSH.
