--- a/protocolo/capitulos/marco_teorico.tex
+++ b/protocolo/capitulos/marco_teorico.tex
@@ -24,12 +24,41 @@
 
 \subsection{Marco teórico}
 
+\subsubsection{Punto de acceso}
+\subsubsection{DHCP}
+\subsubsection{DNS}
+\subsubsection{HTTP}
+\subsubsection{HTTPS}
+\subsubsection{JSON}
+\subsubsection{API REST}
+\subsubsection{Microcontroladores}
+\subsubsection{\textit{Proxy}}
+\subsubsection{\textit{Proxy} inverso}
+\subsubsection{Servidor privado virtual}
+
+
+\subsubsection{Metodología ágil} % como se explica que es aqui ya no hay que explicar lo que es en la metodologia 
 
 \subsection{Marco tecnológico}
 
+\subsubsection{\textit{Raspberry pi}}
+Un \textit{raspberry pi} es una computadora de bajo costo del tamaño de una tarjeta de crédito. Fue creada por la fundación Raspberry Pi, con el objetivo de fomentar la enseñanza de la computación y la programación \ref{what_is_raspberry}.
 
-% sensores
-\subsubsection{}
+Cuenta con una arquitectura móvil (ARM), por lo que pueden utilizar varias distribuciones de Linux como sistema operativo. Las principales distribuciones que están disponibles son Raspberry Pi OS, Debian Buster y Ubuntu 20.04 \ref{raspberry_os}.
+
+\subsubsection{\textit{Hologram Nova}}
+\subsubsection{Node MCU-ESP826}
+\subsubsection{\textit{FastAPI}}
+\subsubsection{NGINX}
+\subsubsection{PM2}
+\subsubsection{AJAX}
+\subsubsection{MongoDB}
+Motor de base de datos de código abierto no relacional que almacena los datos en estructuras tipo JSON llamados documentos. Los campos de los documentos pueden variar de documento a documento. Esta flexibilidad que ofrece contribuye a un desarrollo más rápido al no tenerse que preocupar de la integridad referencial. Tiene una licencia que permite su uso en aplicaciones personales y comerciales, siempre y cuando no se ofrezca la base de datos como un servicio \cite{what_is_mongo}.
+
+\subsubsection{\textit{JSON Web Token}}
+
+
+\subsubsection{Vue.js}
 
 % microcontroladores
 
@@ -40,17 +69,17 @@
 % TODO: El marco teorico es mas para 
 
 
-1. Agricultura de precision
-    1.1 Intro (hablar general de la agricultura, invernaderos y agricultura protegida)
-    3.1 Importancia
-    3.2 Ventajas
-    3.2 Desventajas % costo
-2. Hardware 
-    IoT, arduinos sensores
-3. Control
-    Intro (teoria del control, control automatico, control difuso)
-    3.1 Logica difusa
-4. Aplicaciones web
-    4.2 Bases de datos
-    4.3 APIs
+% 1. Agricultura de precision
+%     1.1 Intro (hablar general de la agricultura, invernaderos y agricultura protegida)
+%     3.1 Importancia
+%     3.2 Ventajas
+%     3.2 Desventajas % costo
+% 2. Hardware 
+%     IoT, arduinos sensores
+% 3. Control
+%     Intro (teoria del control, control automatico, control difuso)
+%     3.1 Logica difusa
+% 4. Aplicaciones web
+%     4.2 Bases de datos
+%     4.3 APIs
 
