--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -53,6 +53,46 @@ year = {2021}
     note          = "Version 4.3"
 }
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% marco teorico
+
+@misc{what_is_mongo,
+author = "{MongoDB}",
+title = {{What is MongoDB?}},
+howpublished = {\url{https://www.mongodb.com/what-is-mongodb}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+@misc{what_is_raspberry,
+author = "{Raspberry Pi Foundation}",
+title = {{What is a Raspberry Pi?}},
+howpublished = {\url{https://www.raspberrypi.org/help/what-%20is-a-raspberry-pi/}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+@misc{raspberry_os,
+author = "{Raspberry Pi Foundation}",
+title = {{Operating system images}},
+howpublished = {\url{https://www.raspberrypi.org/software/operating-systems/#raspberry-pi-os-32-bit}},
+note = {Online; accessed April 18, 2021},
+year = {2021}
+}
+
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
 @misc{intelliclimate_kit_2021,
 author = "{Autogrow}",
 title = {{Intelliclimate Kit}},
